fixed navbar sizing, fixed some width, overflow-x:hidden

--- a/homepage.css
+++ b/homepage.css
@@ -1,5 +1,7 @@
 body {
     font-family: 'Dongle', sans-serif;
+    margin: 0;
+    overflow-x: hidden
 }
 
 :root{
@@ -11,6 +13,7 @@ body {
    --light-blue: #B2E4FA;
 }
 
+
 /* HEADER */
 navbar {
     display: flex;
@@ -19,8 +22,9 @@ navbar {
     font-size: 28px;
     padding: 5px 5px;
     margin:0;
-    width: 100%;
+    /* width: 100%; */
     color:white;
+    height: 10vh;
 }
 
 navbar #page-links {
@@ -30,8 +34,12 @@ navbar #page-links {
     justify-content: space-between;
     list-style-type: none;
     padding: 0;
+    margin-top: 10px;
 }
 
+#logo-image {
+    height: 50px;
+}
 #register #login-register {
     display: flex;
 
@@ -220,8 +228,8 @@ li img {
 
 #how-information {
     background-color: var(--off-white);
-    width: 100vw;
-    padding-left: 350px;
+    width: 90vw;
+    padding-left: 10vw;
 }
 
 #how-information h4 {
@@ -318,13 +326,14 @@ li img {
 
 #sections {
     display: flex;
+    width: 80%;
     flex-direction: row;
     margin-top: 30px;
     background-color: var(--light-blue);
     color: var(--grey);
     padding-bottom: 40px;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 10%;
+    padding-right: 10%;
     padding-top: 40px;
 }
 
